# notojp-matplotlib

./: LICENCE  README.md  pyproject.toml
notojp_matplotlib/: __init__.py
