[tool.poetry]
name = "notojp-matplotlib"
version = "0.1.0"
description = ""
authors = ["Takumasa Nakamura <n.takumasa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "notojp_matplotlib"}]

[tool.poetry.dependencies]
python = "^3.8.1"
matplotlib = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
